# secscraper

./: .gitignore  README.md  mypy.ini  pyproject.toml  test.env
.github/workflows/: main.yml
config/: settings.py
scripts/: maintenance.py  run_scraper.py  test_setup.py
src/clients/: base_client.py  nasdaq_client.py  sec_client.py
src/models/: base.py  company.py  earnings.py
src/repositories/: base_repository.py  csv_repository.py  earnings_repository.py
src/services/: cik_service.py  earnings_service.py
src/utils/: date_utils.py  exceptions.py  logging_utils.py
tests/: conftest.py  pytest.ini  run_tests.py
tests/unit/clients/: test_base_client.py  test_nasdaq_client.py  test_sec_client.py
tests/unit/models/: test_company.py  test_earnings.py
tests/unit/repositories/: test_csv_repository.py
tests/unit/services/: test_cik_service.py  test_earnings_service.py
