[project]
name = "sec-earnings-scraper"
version = "0.1.0"
description = "A robust SEC earnings data scraper"
authors = [
    {name = "Dan Johnson", email = "dsj7419@gmail.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.9.1",
    "backoff>=2.2.1",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "httpx>=0.25.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["E", "W", "F", "I", "C", "B"]
ignore = []
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
asyncio_mode = "auto"